# cuthill-mckee-f

./: .gitmodules  Makefile  README.md  meson.build
examples/: star.1.4.json
src/: cuthil_mckee.f90  cuthill_mckee.f90  main.f90
subprojects/json-fortran/: meson.build
tools/: graph.py  mesh_convert.py
